Projects/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: notes-app-deployment
  namespace: nginx
  labels:
    app: notes-app-k8s
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: notes-app-k8s
  template:
    metadata:
      labels:
        app: notes-app-k8s
    spec:
      containers:
        - name: k8s-container
          image: shajay3007/ask-notes-app-k8s
          ports:
          - containerPort: 8000
