Projects/nginx-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ng-app-svc
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
